y.output
Terminals unused in grammar

   T_LE
   T_GE
   T_NEC
   T_NE
   T_EQC
   T_EXP
   T_AND
   T_OR
   T_XOR
   T_FE
   T_AS
   T_LT
   T_GT
   T_NOT
   T_MOD
   T_EQ


Grammar

    0 $accept: Start $end

    1 Start: T_START Statements T_END

    2 Statements: Statements Assignment T_SC
    3           | Assignment T_SC
    4           | Statements Switch_Stat
    5           | Switch_Stat

    6 Switch_Stat: T_SW T_OB switch_exp T_CB T_OP Switch_Blk T_CP

    7 switch_exp: T_ID T_PL Assignment
    8           | T_ID T_MIN Assignment
    9           | T_ID T_STAR Assignment
   10           | T_ID T_DIV Assignment
   11           | NUM T_PL Assignment
   12           | NUM T_MIN Assignment
   13           | NUM T_STAR Assignment
   14           | NUM T_DIV Assignment
   15           | NUM
   16           | T_ID

   17 Switch_Blk: CaseBlock
   18           | CaseBlock DEF

   19 CaseBlock: CaseBlock T_CASE NUM T_C St1
   20          | CaseBlock T_CASE NUM T_C St1 T_BR T_SC
   21          | %empty

   22 DEF: T_DF T_C St1 T_BR T_SC
   23    | T_DF T_C St1

   24 St1: St1 exp T_SC
   25    | exp T_SC

   26 exp: Assignment

   27 Assignment: T_ID T_EQL Assignment
   28           | T_ID T_PL Assignment
   29           | T_ID T_MIN Assignment
   30           | T_ID T_STAR Assignment
   31           | T_ID T_DIV Assignment
   32           | NUM T_PL Assignment
   33           | NUM T_MIN Assignment
   34           | NUM T_STAR Assignment
   35           | NUM T_DIV Assignment
   36           | T_OB Assignment T_CB
   37           | T_MIN NUM
   38           | T_MIN T_ID
   39           | NUM
   40           | T_ID


Terminals, with rules where they appear

$end (0) 0
error (256)
T_START (258) 1
T_END (259) 1
T_LE (260)
T_GE (261)
T_NEC (262)
T_NE (263)
T_EQC (264)
T_EXP (265)
T_AND (266)
T_OR (267)
T_XOR (268)
T_SW (269) 6
T_FE (270)
T_AS (271)
T_CASE (272) 19 20
T_BR (273) 20 22
T_DF (274) 22 23
NUM (275) 11 12 13 14 15 19 20 32 33 34 35 37 39
T_LT (276)
T_GT (277)
T_NOT (278)
T_OP (279) 6
T_CP (280) 6
T_OB (281) 6 36
T_CB (282) 6 36
T_SC (283) 2 3 20 22 24 25
T_C (284) 19 20 22 23
T_PL (285) 7 11 28 32
T_MIN (286) 8 12 29 33 37 38
T_STAR (287) 9 13 30 34
T_DIV (288) 10 14 31 35
T_MOD (289)
T_EQL (290) 27
T_EQ (291)
T_ID (292) 7 8 9 10 16 27 28 29 30 31 38 40


Nonterminals, with rules where they appear

$accept (38)
    on left: 0
Start (39)
    on left: 1, on right: 0
Statements (40)
    on left: 2 3 4 5, on right: 1 2 4
Switch_Stat (41)
    on left: 6, on right: 4 5
switch_exp (42)
    on left: 7 8 9 10 11 12 13 14 15 16, on right: 6
Switch_Blk (43)
    on left: 17 18, on right: 6
CaseBlock (44)
    on left: 19 20 21, on right: 17 18 19 20
DEF (45)
    on left: 22 23, on right: 18
St1 (46)
    on left: 24 25, on right: 19 20 22 23 24
exp (47)
    on left: 26, on right: 24 25
Assignment (48)
    on left: 27 28 29 30 31 32 33 34 35 36 37 38 39 40, on right: 2
    3 7 8 9 10 11 12 13 14 26 27 28 29 30 31 32 33 34 35 36


State 0

    0 $accept: . Start $end

    T_START  shift, and go to state 1

    Start  go to state 2


State 1

    1 Start: T_START . Statements T_END

    T_SW   shift, and go to state 3
    NUM    shift, and go to state 4
    T_OB   shift, and go to state 5
    T_MIN  shift, and go to state 6
    T_ID   shift, and go to state 7

    Statements   go to state 8
    Switch_Stat  go to state 9
    Assignment   go to state 10


State 2

    0 $accept: Start . $end

    $end  shift, and go to state 11


State 3

    6 Switch_Stat: T_SW . T_OB switch_exp T_CB T_OP Switch_Blk T_CP

    T_OB  shift, and go to state 12


State 4

   32 Assignment: NUM . T_PL Assignment
   33           | NUM . T_MIN Assignment
   34           | NUM . T_STAR Assignment
   35           | NUM . T_DIV Assignment
   39           | NUM .

    T_PL    shift, and go to state 13
    T_MIN   shift, and go to state 14
    T_STAR  shift, and go to state 15
    T_DIV   shift, and go to state 16

    $default  reduce using rule 39 (Assignment)


State 5

   36 Assignment: T_OB . Assignment T_CB

    NUM    shift, and go to state 4
    T_OB   shift, and go to state 5
    T_MIN  shift, and go to state 6
    T_ID   shift, and go to state 7

    Assignment  go to state 17


State 6

   37 Assignment: T_MIN . NUM
   38           | T_MIN . T_ID

    NUM   shift, and go to state 18
    T_ID  shift, and go to state 19


State 7

   27 Assignment: T_ID . T_EQL Assignment
   28           | T_ID . T_PL Assignment
   29           | T_ID . T_MIN Assignment
   30           | T_ID . T_STAR Assignment
   31           | T_ID . T_DIV Assignment
   40           | T_ID .

    T_PL    shift, and go to state 20
    T_MIN   shift, and go to state 21
    T_STAR  shift, and go to state 22
    T_DIV   shift, and go to state 23
    T_EQL   shift, and go to state 24

    $default  reduce using rule 40 (Assignment)


State 8

    1 Start: T_START Statements . T_END
    2 Statements: Statements . Assignment T_SC
    4           | Statements . Switch_Stat

    T_END  shift, and go to state 25
    T_SW   shift, and go to state 3
    NUM    shift, and go to state 4
    T_OB   shift, and go to state 5
    T_MIN  shift, and go to state 6
    T_ID   shift, and go to state 7

    Switch_Stat  go to state 26
    Assignment   go to state 27


State 9

    5 Statements: Switch_Stat .

    $default  reduce using rule 5 (Statements)


State 10

    3 Statements: Assignment . T_SC

    T_SC  shift, and go to state 28


State 11

    0 $accept: Start $end .

    $default  accept


State 12

    6 Switch_Stat: T_SW T_OB . switch_exp T_CB T_OP Switch_Blk T_CP

    NUM   shift, and go to state 29
    T_ID  shift, and go to state 30

    switch_exp  go to state 31


State 13

   32 Assignment: NUM T_PL . Assignment

    NUM    shift, and go to state 4
    T_OB   shift, and go to state 5
    T_MIN  shift, and go to state 6
    T_ID   shift, and go to state 7

    Assignment  go to state 32


State 14

   33 Assignment: NUM T_MIN . Assignment

    NUM    shift, and go to state 4
    T_OB   shift, and go to state 5
    T_MIN  shift, and go to state 6
    T_ID   shift, and go to state 7

    Assignment  go to state 33


State 15

   34 Assignment: NUM T_STAR . Assignment

    NUM    shift, and go to state 4
    T_OB   shift, and go to state 5
    T_MIN  shift, and go to state 6
    T_ID   shift, and go to state 7

    Assignment  go to state 34


State 16

   35 Assignment: NUM T_DIV . Assignment

    NUM    shift, and go to state 4
    T_OB   shift, and go to state 5
    T_MIN  shift, and go to state 6
    T_ID   shift, and go to state 7

    Assignment  go to state 35


State 17

   36 Assignment: T_OB Assignment . T_CB

    T_CB  shift, and go to state 36


State 18

   37 Assignment: T_MIN NUM .

    $default  reduce using rule 37 (Assignment)


State 19

   38 Assignment: T_MIN T_ID .

    $default  reduce using rule 38 (Assignment)


State 20

   28 Assignment: T_ID T_PL . Assignment

    NUM    shift, and go to state 4
    T_OB   shift, and go to state 5
    T_MIN  shift, and go to state 6
    T_ID   shift, and go to state 7

    Assignment  go to state 37


State 21

   29 Assignment: T_ID T_MIN . Assignment

    NUM    shift, and go to state 4
    T_OB   shift, and go to state 5
    T_MIN  shift, and go to state 6
    T_ID   shift, and go to state 7

    Assignment  go to state 38


State 22

   30 Assignment: T_ID T_STAR . Assignment

    NUM    shift, and go to state 4
    T_OB   shift, and go to state 5
    T_MIN  shift, and go to state 6
    T_ID   shift, and go to state 7

    Assignment  go to state 39


State 23

   31 Assignment: T_ID T_DIV . Assignment

    NUM    shift, and go to state 4
    T_OB   shift, and go to state 5
    T_MIN  shift, and go to state 6
    T_ID   shift, and go to state 7

    Assignment  go to state 40


State 24

   27 Assignment: T_ID T_EQL . Assignment

    NUM    shift, and go to state 4
    T_OB   shift, and go to state 5
    T_MIN  shift, and go to state 6
    T_ID   shift, and go to state 7

    Assignment  go to state 41


State 25

    1 Start: T_START Statements T_END .

    $default  reduce using rule 1 (Start)


State 26

    4 Statements: Statements Switch_Stat .

    $default  reduce using rule 4 (Statements)


State 27

    2 Statements: Statements Assignment . T_SC

    T_SC  shift, and go to state 42


State 28

    3 Statements: Assignment T_SC .

    $default  reduce using rule 3 (Statements)


State 29

   11 switch_exp: NUM . T_PL Assignment
   12           | NUM . T_MIN Assignment
   13           | NUM . T_STAR Assignment
   14           | NUM . T_DIV Assignment
   15           | NUM .

    T_PL    shift, and go to state 43
    T_MIN   shift, and go to state 44
    T_STAR  shift, and go to state 45
    T_DIV   shift, and go to state 46

    $default  reduce using rule 15 (switch_exp)


State 30

    7 switch_exp: T_ID . T_PL Assignment
    8           | T_ID . T_MIN Assignment
    9           | T_ID . T_STAR Assignment
   10           | T_ID . T_DIV Assignment
   16           | T_ID .

    T_PL    shift, and go to state 47
    T_MIN   shift, and go to state 48
    T_STAR  shift, and go to state 49
    T_DIV   shift, and go to state 50

    $default  reduce using rule 16 (switch_exp)


State 31

    6 Switch_Stat: T_SW T_OB switch_exp . T_CB T_OP Switch_Blk T_CP

    T_CB  shift, and go to state 51


State 32

   32 Assignment: NUM T_PL Assignment .

    $default  reduce using rule 32 (Assignment)


State 33

   33 Assignment: NUM T_MIN Assignment .

    $default  reduce using rule 33 (Assignment)


State 34

   34 Assignment: NUM T_STAR Assignment .

    $default  reduce using rule 34 (Assignment)


State 35

   35 Assignment: NUM T_DIV Assignment .

    $default  reduce using rule 35 (Assignment)


State 36

   36 Assignment: T_OB Assignment T_CB .

    $default  reduce using rule 36 (Assignment)


State 37

   28 Assignment: T_ID T_PL Assignment .

    $default  reduce using rule 28 (Assignment)


State 38

   29 Assignment: T_ID T_MIN Assignment .

    $default  reduce using rule 29 (Assignment)


State 39

   30 Assignment: T_ID T_STAR Assignment .

    $default  reduce using rule 30 (Assignment)


State 40

   31 Assignment: T_ID T_DIV Assignment .

    $default  reduce using rule 31 (Assignment)


State 41

   27 Assignment: T_ID T_EQL Assignment .

    $default  reduce using rule 27 (Assignment)


State 42

    2 Statements: Statements Assignment T_SC .

    $default  reduce using rule 2 (Statements)


State 43

   11 switch_exp: NUM T_PL . Assignment

    NUM    shift, and go to state 4
    T_OB   shift, and go to state 5
    T_MIN  shift, and go to state 6
    T_ID   shift, and go to state 7

    Assignment  go to state 52


State 44

   12 switch_exp: NUM T_MIN . Assignment

    NUM    shift, and go to state 4
    T_OB   shift, and go to state 5
    T_MIN  shift, and go to state 6
    T_ID   shift, and go to state 7

    Assignment  go to state 53


State 45

   13 switch_exp: NUM T_STAR . Assignment

    NUM    shift, and go to state 4
    T_OB   shift, and go to state 5
    T_MIN  shift, and go to state 6
    T_ID   shift, and go to state 7

    Assignment  go to state 54


State 46

   14 switch_exp: NUM T_DIV . Assignment

    NUM    shift, and go to state 4
    T_OB   shift, and go to state 5
    T_MIN  shift, and go to state 6
    T_ID   shift, and go to state 7

    Assignment  go to state 55


State 47

    7 switch_exp: T_ID T_PL . Assignment

    NUM    shift, and go to state 4
    T_OB   shift, and go to state 5
    T_MIN  shift, and go to state 6
    T_ID   shift, and go to state 7

    Assignment  go to state 56


State 48

    8 switch_exp: T_ID T_MIN . Assignment

    NUM    shift, and go to state 4
    T_OB   shift, and go to state 5
    T_MIN  shift, and go to state 6
    T_ID   shift, and go to state 7

    Assignment  go to state 57


State 49

    9 switch_exp: T_ID T_STAR . Assignment

    NUM    shift, and go to state 4
    T_OB   shift, and go to state 5
    T_MIN  shift, and go to state 6
    T_ID   shift, and go to state 7

    Assignment  go to state 58


State 50

   10 switch_exp: T_ID T_DIV . Assignment

    NUM    shift, and go to state 4
    T_OB   shift, and go to state 5
    T_MIN  shift, and go to state 6
    T_ID   shift, and go to state 7

    Assignment  go to state 59


State 51

    6 Switch_Stat: T_SW T_OB switch_exp T_CB . T_OP Switch_Blk T_CP

    T_OP  shift, and go to state 60


State 52

   11 switch_exp: NUM T_PL Assignment .

    $default  reduce using rule 11 (switch_exp)


State 53

   12 switch_exp: NUM T_MIN Assignment .

    $default  reduce using rule 12 (switch_exp)


State 54

   13 switch_exp: NUM T_STAR Assignment .

    $default  reduce using rule 13 (switch_exp)


State 55

   14 switch_exp: NUM T_DIV Assignment .

    $default  reduce using rule 14 (switch_exp)


State 56

    7 switch_exp: T_ID T_PL Assignment .

    $default  reduce using rule 7 (switch_exp)


State 57

    8 switch_exp: T_ID T_MIN Assignment .

    $default  reduce using rule 8 (switch_exp)


State 58

    9 switch_exp: T_ID T_STAR Assignment .

    $default  reduce using rule 9 (switch_exp)


State 59

   10 switch_exp: T_ID T_DIV Assignment .

    $default  reduce using rule 10 (switch_exp)


State 60

    6 Switch_Stat: T_SW T_OB switch_exp T_CB T_OP . Switch_Blk T_CP

    $default  reduce using rule 21 (CaseBlock)

    Switch_Blk  go to state 61
    CaseBlock   go to state 62


State 61

    6 Switch_Stat: T_SW T_OB switch_exp T_CB T_OP Switch_Blk . T_CP

    T_CP  shift, and go to state 63


State 62

   17 Switch_Blk: CaseBlock .
   18           | CaseBlock . DEF
   19 CaseBlock: CaseBlock . T_CASE NUM T_C St1
   20          | CaseBlock . T_CASE NUM T_C St1 T_BR T_SC

    T_CASE  shift, and go to state 64
    T_DF    shift, and go to state 65

    $default  reduce using rule 17 (Switch_Blk)

    DEF  go to state 66


State 63

    6 Switch_Stat: T_SW T_OB switch_exp T_CB T_OP Switch_Blk T_CP .

    $default  reduce using rule 6 (Switch_Stat)


State 64

   19 CaseBlock: CaseBlock T_CASE . NUM T_C St1
   20          | CaseBlock T_CASE . NUM T_C St1 T_BR T_SC

    NUM  shift, and go to state 67


State 65

   22 DEF: T_DF . T_C St1 T_BR T_SC
   23    | T_DF . T_C St1

    T_C  shift, and go to state 68


State 66

   18 Switch_Blk: CaseBlock DEF .

    $default  reduce using rule 18 (Switch_Blk)


State 67

   19 CaseBlock: CaseBlock T_CASE NUM . T_C St1
   20          | CaseBlock T_CASE NUM . T_C St1 T_BR T_SC

    T_C  shift, and go to state 69


State 68

   22 DEF: T_DF T_C . St1 T_BR T_SC
   23    | T_DF T_C . St1

    NUM    shift, and go to state 4
    T_OB   shift, and go to state 5
    T_MIN  shift, and go to state 6
    T_ID   shift, and go to state 7

    St1         go to state 70
    exp         go to state 71
    Assignment  go to state 72


State 69

   19 CaseBlock: CaseBlock T_CASE NUM T_C . St1
   20          | CaseBlock T_CASE NUM T_C . St1 T_BR T_SC

    NUM    shift, and go to state 4
    T_OB   shift, and go to state 5
    T_MIN  shift, and go to state 6
    T_ID   shift, and go to state 7

    St1         go to state 73
    exp         go to state 71
    Assignment  go to state 72


State 70

   22 DEF: T_DF T_C St1 . T_BR T_SC
   23    | T_DF T_C St1 .
   24 St1: St1 . exp T_SC

    T_BR   shift, and go to state 74
    NUM    shift, and go to state 4
    T_OB   shift, and go to state 5
    T_MIN  shift, and go to state 6
    T_ID   shift, and go to state 7

    $default  reduce using rule 23 (DEF)

    exp         go to state 75
    Assignment  go to state 72


State 71

   25 St1: exp . T_SC

    T_SC  shift, and go to state 76


State 72

   26 exp: Assignment .

    $default  reduce using rule 26 (exp)


State 73

   19 CaseBlock: CaseBlock T_CASE NUM T_C St1 .
   20          | CaseBlock T_CASE NUM T_C St1 . T_BR T_SC
   24 St1: St1 . exp T_SC

    T_BR   shift, and go to state 77
    NUM    shift, and go to state 4
    T_OB   shift, and go to state 5
    T_MIN  shift, and go to state 6
    T_ID   shift, and go to state 7

    $default  reduce using rule 19 (CaseBlock)

    exp         go to state 75
    Assignment  go to state 72


State 74

   22 DEF: T_DF T_C St1 T_BR . T_SC

    T_SC  shift, and go to state 78


State 75

   24 St1: St1 exp . T_SC

    T_SC  shift, and go to state 79


State 76

   25 St1: exp T_SC .

    $default  reduce using rule 25 (St1)


State 77

   20 CaseBlock: CaseBlock T_CASE NUM T_C St1 T_BR . T_SC

    T_SC  shift, and go to state 80


State 78

   22 DEF: T_DF T_C St1 T_BR T_SC .

    $default  reduce using rule 22 (DEF)


State 79

   24 St1: St1 exp T_SC .

    $default  reduce using rule 24 (St1)


State 80

   20 CaseBlock: CaseBlock T_CASE NUM T_C St1 T_BR T_SC .

    $default  reduce using rule 20 (CaseBlock)
